--- a/Frontend/frontend_startSchermSporter.html
+++ b/Frontend/frontend_startSchermSporter.html
@@ -15,14 +15,12 @@
 		xhr.onreadystatechange = function () {
 			if (this.readyState == 4) {
 				var rijtjeOefeningen = JSON.parse(this.responseText);
-				console.log(rijtjeOefeningen);
 				var eindtekst = "";
 				for (var x = 0; x < rijtjeOefeningen.length; x++) {
 					eindtekst += "<a class=\"dropdown-item\" onclick = \"showOefening("+ rijtjeOefeningen[x].id 
                     + ")\">" + rijtjeOefeningen[x].naam + "</a>";
 				}
 				document.getElementById("oefeningen").innerHTML = eindtekst;
-                console.log(eindtekst);
 			}
 		};
         xhr.open("GET", "http://localhost:8082/allOefeningen", true);
@@ -55,7 +53,7 @@
             }
         };
         //HARDCODE 1
-        xhr.open("GET", "http://localhost:8082/toonPlanning/" + sporterID, true);
+        xhr.open("GET", "http://localhost:8082/toonPlanning/" + sporterID, true);  //Moet dit window.sporterID zijn?
         xhr.send();
 
  	}
@@ -94,11 +92,9 @@
 		voortgangObject.gebruiktegewicht = gewicht;
 		voortgangObject.starttijd = starttijd;
 		var objJSON = JSON.stringify(voortgangObject);
-		console.log(objJSON);
 		var xhr = new XMLHttpRequest();
 		xhr.onreadystatechange = function () {
 			if (this.readyState == 4) {
-				alert(this.responseText);
 			}
 		};
 		xhr.open("POST", "http://localhost:8082/vulVoortgang" + "/" + oefening, true);
@@ -127,7 +123,6 @@
 	}
 
 	function slaAntwoordOp() {
-		document.getElementById("scherm").innerHTML = "";
 		var xhr = new XMLHttpRequest();
 		var idVoortgang = document.getElementById("voortgangID").value;
 		var vragenlijsten = {};
@@ -138,17 +133,6 @@
 		}else{
 			vragenlijsten.antwoorden="slecht";
 		}
-		
-		/*
-		if (i == 0) {
-			vragenlijsten.antwoorden = "goed";
-		}
-		else if (i == 1) {
-			vragenlijsten.antwoorden = "matig";
-		}
-		else {
-			vragenlijsten.antwoorden = "slecht";
-		}*/
 		var objJSON = JSON.stringify(vragenlijsten);
 		window.gevoel = vragenlijsten.antwoorden;
 		xhr.onreadystatechange = function () {
@@ -156,19 +140,29 @@
 				console.log(objJSON);
 			}
 		};
-		xhr.open("POST", "http://localhost:8082/save/antwoord/"+window.inlogID, true);
+		xhr.open("POST", "http://localhost:8082/save/antwoord/"+window.sporterID, true);
 		xhr.setRequestHeader("Content-Type", "application/json");
 		xhr.send(objJSON);
-		document.getElementById("oefening invullen").hidden = false;
-		document.getElementById("vragenlijstinvullen").hidden = true;
 		antwoordVoortgang(idVoortgang);
 	}
+
+	function antwoordVoortgang(id){
+		var voortgangObject = {};
+		voortgangObject.id = id;
+		voortgangObject.antwoord = window.gevoel;
+		var objJSON = JSON.stringify(voortgangObject);
+		xhr = new XMLHttpRequest();
+		xhr.onreadystatechange = function(){};
+		xhr.open("POST","http://localhost:8082/voortgangAntwoord");
+		xhr.setRequestHeader("Content-Type","application/json");
+		xhr.send(objJSON);
+	}
+
 	function toonVoortgang() {
 		var xhr = new XMLHttpRequest();
 		xhr.onreadystatechange = function () {
 			if (this.readyState == 4) {
 				var rijtjeVoortgang = JSON.parse(this.responseText);
-				console.log(rijtjeVoortgang);
 				var eindtekst = "<table class =\"table\">"
 					+ "<thead class =\"thead-dark\"><tr>"
 					+ "<th scope = \"col\">ID</th>"
@@ -207,6 +201,40 @@
 		xhr.open("POST", "http://localhost:8082/verwijderOefening", true);
 		xhr.setRequestHeader("Content-Type", "application/json");
 		xhr.send(ID);
+	}
+	function toonVoortgangVragenlijst() {
+		var xhr = new XMLHttpRequest();
+		xhr.onreadystatechange = function () {
+			if (this.readyState == 4) {
+				var rijtjeVoortgang = JSON.parse(this.responseText);
+				var eindtekst = "<table class =\"table\">"
+					+ "<thead class =\"thead-dark\"><tr>"
+					+ "<th scope = \"col\">ID</th>"
+					+ "<th scope = \"col\">Oefening</th>"
+					+ "<th scope = \"col\">Gewicht</th>"
+					+ "<th scope =\"col\">Starttijd</th>"
+					+ "<th scope = \"col\">Tijdsduur</th>"
+					+ "<th scope = \"col\">Aantal reps</th>"
+					+ "<th scope = \"col\">Gegeven feedback</th>" 
+					+ "<th scope = \"col\">Gevoel</tr></thead><tbody>";
+				for (var x = 0; x < rijtjeVoortgang.length; x++) {
+					eindtekst += "<tr><td>" + rijtjeVoortgang[x].id +
+						"</td><td>" + rijtjeVoortgang[x].oefening.naam +
+						"</td><td>" + rijtjeVoortgang[x].gebruiktegewicht +
+						"</td><td>" + rijtjeVoortgang[x].starttijd +
+						"</td><td>" + rijtjeVoortgang[x].oefeningtijd +
+						"</td><td>" + rijtjeVoortgang[x].liftaantal +
+						"</td><td>" + rijtjeVoortgang[x].feedback + 
+						"</td><td>" + rijtjeVoortgang[x].antwoorden + "</td></tr>";
+						console.log(rijtjeVoortgang[x].oefening);
+				}
+				eindtekst += "</tbody></table>";
+				document.getElementById("tabelDiv").innerHTML = eindtekst;
+				document.getElementById("tabelDiv").hidden = false;
+			}
+		};
+		xhr.open("GET", "http://localhost:8082/allVoortgang", true);
+		xhr.send();
 	}
 </script>
 <body>
@@ -276,12 +304,21 @@
 			<div id="vraag">Hier komt de vraag!</div>
 			<br>
 			<br>
-			<input type=button value="goed" onclick="slaAntwoordOp(0)">
-			<input type=button value="matig" onclick="slaAntwoordOp(1)">
-			<input type=button value="slecht" onclick="slaAntwoordOp(2)">
+			<div id="uitleg id">Geef het ID op van de training waar je antwoord op wil geven.</div><br><br>
+			<input type=text id="voortgangID"><input type=button value="Laat hele voortgangtabel zien" onclick="toonVoortgangVragenlijst()"><br><br>
+			<input type="radio" id="antwoord-goed" name="antwoord" value="goed">
+  			<label for="goed">Goed</label><br>
+  			<input type="radio" id="antwoord-matig" name="antwoord" value="matig">
+  			<label for="matig">Matig</label><br>
+  			<input type="radio" id="antwoord-slecht" name="antwoord" value="slecht">
+			<label for="slecht">Slecht</label><br>
+			<input type=button id="verstuurAntwoord" value="Verstuur antwoord" onclick="slaAntwoordOp()">
 			<b></b>
-			<input type=button value="voeg toe" onclick="verkrijgAlleVragenlijsten()">
-			<div id=output></div>
+			<div id="tabelDiv"></div>
+			<div id="allevragenlijsten" hidden>
+				<input type=button value="voeg toe" onclick="verkrijgAlleVragenlijsten()">
+				<div id=output></div>
+			</div>
     </div>
 
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
