--- a/Frontend/frontend_startScherm.html
+++ b/Frontend/frontend_startScherm.html
@@ -107,19 +107,13 @@
 				console.log(rijtjesCoaches);
 			    rijtjesCoaches.forEach(element => {
 				 	if (element.naam == naam) {
-<<<<<<< HEAD
                          inLijst = true;
                          var coachID = element.id;
-                         window.location.href = "http://localhost:4200/?coachID="+coachID;
-=======
-                        inLijst = true;
-                        if(element.wachtwoord == ww) {
-                            window.location.href = "http://localhost:4200";
-                        }
-                        else {
+                         if(element.wachtwoord == ww) {
+                            window.location.href = "http://localhost:4200/?coachID="+coachID;
+                         }else {
                             alert("Je wachtwoord klopt niet!");
                         }
->>>>>>> master
 				 	}
 				});
 				if (!inLijst) {
