wachtwoord iets beter

--- a/Frontend/frontend_startScherm.html
+++ b/Frontend/frontend_startScherm.html
@@ -183,7 +183,7 @@
             </div>
             <div class="form-group">
                 <label class="col-sm-2 col-form-label">Wachtwoord</label>
-                <input type="wachtwoord" class="form-control" id="exampleWachtwoord" aria-describedby="wachtwoordHelp">
+                <input type="password" class="form-control" id="exampleWachtwoord" aria-describedby="wachtwoordHelp">
                 <small id="wachtwoordHelp" class="form-text text-muted">Dit is volkomen privé</small>
                 <br><br>
                 <label for="coachcheck">Ben jij coach?</label>
