--- a/Frontend/frontend_startSchermSporter.html
+++ b/Frontend/frontend_startSchermSporter.html
@@ -264,7 +264,7 @@
 </script>
 
 <body>
-	<ul class="nav nav-pills">
+	<ul class="nav nav-pills justify-content-center">
 		<li class="nav-item">
 			<button type="button" class="btn btn-outline-primary" onclick="showPlanning()">Planning</a>
 		</li>
