--- a/Frontend/frontend_startSchermSporter.html
+++ b/Frontend/frontend_startSchermSporter.html
@@ -8,6 +8,7 @@
 
 <script>
 	var sporterID = new URL(window.location.href).searchParams.get("inlogID");
+	var gevoel;
 	function veranderIets() {
 		document.getElementById("displayScherm").innerHTML = "<p>iets</p>";
 	}
