--- a/Frontend/frontend_startSchermSporter.html
+++ b/Frontend/frontend_startSchermSporter.html
@@ -21,20 +21,38 @@
 					eindtekst += "<a class=\"dropdown-item\" onclick = \"showOefening(" + rijtjeOefeningen[x].id
 						+ ")\">" + rijtjeOefeningen[x].naam + "</a>";
 				}
+
 				document.getElementById("oefeningen").innerHTML = eindtekst;
 			}
 		};
 		xhr.open("GET", "http://localhost:8082/allOefeningen", true);
 		xhr.send();
 	}
-	
-	function showOefening(i){
-        i--;
-        var xhr = new XMLHttpRequest();
+
+	function geefOefeningenSelect() {
+		var xhr = new XMLHttpRequest();
 		xhr.onreadystatechange = function () {
 			if (this.readyState == 4) {
 				var rijtjeOefeningen = JSON.parse(this.responseText);
-                console.log(rijtjeOefeningen);
+				var eindtekst = "<select class=\"custom-select\" id=\"ipoefening\">";
+				for (var x = 0; x < rijtjeOefeningen.length; x++) {
+					eindtekst += "<option>" + rijtjeOefeningen[x].naam + "</option>";
+				}
+				eindtekst += "</select>";
+				document.getElementById("selectding").innerHTML = eindtekst;
+			}
+		};
+		xhr.open("GET", "http://localhost:8082/allOefeningen", true);
+		xhr.send();
+	}
+
+	function showOefening(i) {
+		i--;
+		var xhr = new XMLHttpRequest();
+		xhr.onreadystatechange = function () {
+			if (this.readyState == 4) {
+				var rijtjeOefeningen = JSON.parse(this.responseText);
+				console.log(rijtjeOefeningen);
 				var naam = "<h1>" + rijtjeOefeningen[i].naam + "</h1>";
 				var breakie = "<br>";
 				var uitleg = "<p>" + rijtjeOefeningen[i].uitleg + "</p>";
@@ -43,10 +61,10 @@
 		};
 		xhr.open("GET", "http://localhost:8082/allOefeningen", true);
 		xhr.send();
-    }
-    
+	}
 
-	function mailVersturenCoach(){
+
+	function mailVersturenCoach() {
 		var xhr = new XMLHttpRequest();
 		xhr.onreadystatechange = function () {
 			if (this.readyState == 4) {
@@ -118,8 +136,8 @@
 		var objJSON = JSON.stringify(voortgangObject);
 		var xhr = new XMLHttpRequest();
 		xhr.onreadystatechange = function () {
-			if (this.readyState == 4) {	
-				window.location.href = "frontend_sporterVragenlijst.html?inlogID="+window.sporterID+"&VoortgangID="+this.responseText;			
+			if (this.readyState == 4) {
+				window.location.href = "frontend_sporterVragenlijst.html?inlogID=" + window.sporterID + "&VoortgangID=" + this.responseText;
 			}
 		};
 		xhr.open("POST", "http://localhost:8082/vulVoortgang/" + oefening, true);
@@ -211,7 +229,7 @@
 					console.log(rijtjeVoortgang[x].oefening);
 				}
 				eindtekst += "</tbody></table>";
-				document.getElementById("displayScherm").innerHTML = document.getElementById("voortgangscherm-titel").innerHTML  + eindtekst + document.getElementById("voortgangscherm").innerHTML;
+				document.getElementById("displayScherm").innerHTML = document.getElementById("voortgangscherm-titel").innerHTML + eindtekst + document.getElementById("voortgangscherm").innerHTML;
 
 			}
 		};
@@ -264,7 +282,7 @@
 		xhr.open("GET", "http://localhost:8082/allVoortgang", true);
 		xhr.send();
 	}
-	function Logout(){
+	function Logout() {
 		window.location.href = "frontend_startScherm.html";
 	}
 </script>
@@ -275,18 +293,19 @@
 			<button type="button" class="btn btn-outline-primary" onclick="showPlanning()">Planning</a>
 		</li>
 		<li class="nav-item dropdown">
-			<button type="button" class="btn btn-outline-primary dropdown-toggle dropdown-toggle-split" data-toggle="dropdown" aria-haspopup="true"
-				aria-expanded="false">Oefeningen</a>
-			<div class="dropdown-menu">
-				<div id="oefeningen">
-					<script>geefOefeningen();</script>
+			<button type="button" class="btn btn-outline-primary dropdown-toggle dropdown-toggle-split"
+				data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Oefeningen</a>
+				<div class="dropdown-menu">
+					<div id="oefeningen">
+						<script>geefOefeningen();</script>
+					</div>
 				</div>
-			</div>
 		</li>
 		<li class="nav-item">
-			<button type="button" class="btn btn-outline-primary" onclick="oefeningRegistreren()">Oefening registreren</a>
-			<button type="button" class="btn btn-outline-primary" onclick="toonVoortgang()">Voortgang</button>
-			<button type="button" class="btn btn-outline-primary" onclick="Logout()">Uitloggen</button>
+			<button type="button" class="btn btn-outline-primary" onclick="oefeningRegistreren()">Oefening
+				registreren</a>
+				<button type="button" class="btn btn-outline-primary" onclick="toonVoortgang()">Voortgang</button>
+				<button type="button" class="btn btn-outline-primary" onclick="Logout()">Uitloggen</button>
 		</li>
 	</ul>
 	<! -- DIT IS HET DISPLAY SCHERM -->
@@ -294,93 +313,105 @@
 			<h1 class="jumbotron text-center">WELKOM SPORTER </h1>
 		</div>
 		<! -- DIT IS HET PLANNING SCHERM -->
-		<div id="planning-titel" hidden>
-			<h2 class="jumbotron text-center">Jouw planning</h2>
-		</div>
-		<! -- DIT IS HET OEFENING REGISTRATIE SCHERM -->
-			<div id="oefeningRegistratieScherm" hidden>
-				<form>
-					<div class="jumbotron font-weight-bold text-center">
-						<h2> Wat heb je voor training gedaan? </h2>
-					</div>
-					<div class="font-italic text-center">
-						<label>Oefening: </label> <br>
-						<input type=text id=ipoefening>
-					</div>
-					<div class="font-italic text-center">
-						<label>Oefeningstijd: </label> <br>
-						<input type=number id=ipoefeningtijd>
-					</div>
-					<div class="font-italic text-center">
-						<label>Aantal reps: </label> <br>
-						<input type=number id=ipliftaantal>
-					</div>
-					<div class="font-italic text-center">
-						<label>Gewicht: </label> <br>
-						<input type=text id=ipgewicht> 
-					</div>
-					<div class="font-italic text-center">
-						<label>Starttijd: </label> <br>
-						<input type=datetime-local id=ipstarttijd>
-					</div>
-					
-					<p align="center">
-						<br><input type="button" class="btn btn-outline-primary" value="Voeg Toe" onclick="slaOefeningOp()">
-					</p>
-				</form>
+			<div id="planning-titel" hidden>
+				<h2 class="jumbotron text-center">Jouw planning</h2>
 			</div>
-			<! -- DIT IS HET VRAGENLIJST SCHERM -->
-				<div id="vragenlijstScherm" hidden>
+			<! -- DIT IS HET OEFENING REGISTRATIE SCHERM -->
+				<div id="oefeningRegistratieScherm" hidden>
 					<form>
 						<div class="jumbotron font-weight-bold text-center">
-							<h2>Korte vragenlijst!</h2>
+							<h2> Wat heb je voor training gedaan? </h2>
 						</div>
-						<div id="vraag" class="font-italic text-center">Hier komt de vraag!</div><br>
+					<div class="font-italic text-center">
+						Oefening: <br>
+						<div class="input-group justify-content-center">
+							<div id="selectding">
+								<script>
+									geefOefeningenSelect();
+								</script>
+							</div>
+						</div>
+					</div>
+
+						<div class="font-italic text-center">
+							<label>Oefeningstijd: </label> <br>
+							<input type=number id=ipoefeningtijd>
+						</div>
+						<div class="font-italic text-center">
+							<label>Aantal reps: </label> <br>
+							<input type=number id=ipliftaantal>
+						</div>
+						<div class="font-italic text-center">
+							<label>Gewicht: </label> <br>
+							<input type=text id=ipgewicht>
+						</div>
+						<div class="font-italic text-center">
+							<label>Starttijd: </label> <br>
+							<input type=datetime-local id=ipstarttijd>
+						</div>
+
 						<p align="center">
-							<input type="radio" id="antwoord-goed" name="antwoord" value="goed">
-							<label for="goed">Goed</label><br>
-							<input type="radio" id="antwoord-matig" name="antwoord" value="matig">
-							<label for="matig">Matig</label><br>
-							<input type="radio" id="antwoord-slecht" name="antwoord" value="slecht">
-							<label for="slecht">Slecht</label><br>
-							<input type=button id="verstuurAntwoord" value="Verstuur antwoord" onclick="slaAntwoordOp()">
+							<br><input type="button" class="btn btn-outline-primary" value="Voeg Toe"
+								onclick="slaOefeningOp()">
 						</p>
 					</form>
-					<div id="allevragenlijsten" hidden>
-						<br><br>
-						<div id="uitleg id" class="font-italic">Geef het ID op van de training waar je antwoord op wil geven.</div>
-						<input type=text id="voortgangID"><input type=button class="btn btn-outline-primary" value="Laat hele voortgangtabel zien"
-							onclick="toonVoortgangVragenlijst()">
-						<div id="tabelDiv"></div>
-						<input type=button class="btn btn-outline-primary" value="voeg toe" onclick="verkrijgAlleVragenlijsten()">
-						<div id=output></div>
+				</div>
+				<! -- DIT IS HET VRAGENLIJST SCHERM -->
+					<div id="vragenlijstScherm" hidden>
+						<form>
+							<div class="jumbotron font-weight-bold text-center">
+								<h2>Korte vragenlijst!</h2>
+							</div>
+							<div id="vraag" class="font-italic text-center">Hier komt de vraag!</div><br>
+							<p align="center">
+								<input type="radio" id="antwoord-goed" name="antwoord" value="goed">
+								<label for="goed">Goed</label><br>
+								<input type="radio" id="antwoord-matig" name="antwoord" value="matig">
+								<label for="matig">Matig</label><br>
+								<input type="radio" id="antwoord-slecht" name="antwoord" value="slecht">
+								<label for="slecht">Slecht</label><br>
+								<input type=button id="verstuurAntwoord" value="Verstuur antwoord"
+									onclick="slaAntwoordOp()">
+							</p>
+						</form>
+						<div id="allevragenlijsten" hidden>
+							<br><br>
+							<div id="uitleg id" class="font-italic">Geef het ID op van de training waar je antwoord op
+								wil geven.</div>
+							<input type=text id="voortgangID"><input type=button class="btn btn-outline-primary"
+								value="Laat hele voortgangtabel zien" onclick="toonVoortgangVragenlijst()">
+							<div id="tabelDiv"></div>
+							<input type=button class="btn btn-outline-primary" value="voeg toe"
+								onclick="verkrijgAlleVragenlijsten()">
+							<div id=output></div>
+						</div>
 					</div>
-				</div>
-			<! -- DIT IS VOOR HET VOORTGANG SCHERM -->
-			<div id ="voortgangscherm-titel" hidden>
-				<div class="jumbotron font-weight-bold text-center">
-					<h2> Jouw voortgang </h2>
-				</div>
-			</div>
-				<div id="voortgangscherm" hidden>
-					<div class="font-italic">
-						<br> <label>ID</label>
-						<input type=text id=ipID disabled>
-						<input type="checkbox" id="checkbox" onclick="verwijderModus()">
-						<small class="form-text text-muted">Vul ID in voor verwijdering</small> <br>
-						<input type="button" class="btn btn-outline-primary" value="Delete Voortgang" onclick="verwijderOefening()">
-					</div>
-				</div>
+					<! -- DIT IS VOOR HET VOORTGANG SCHERM -->
+						<div id="voortgangscherm-titel" hidden>
+							<div class="jumbotron font-weight-bold text-center">
+								<h2> Jouw voortgang </h2>
+							</div>
+						</div>
+						<div id="voortgangscherm" hidden>
+							<div class="font-italic">
+								<br> <label>ID</label>
+								<input type=text id=ipID disabled>
+								<input type="checkbox" id="checkbox" onclick="verwijderModus()">
+								<small class="form-text text-muted">Vul ID in voor verwijdering</small> <br>
+								<input type="button" class="btn btn-outline-primary" value="Delete Voortgang"
+									onclick="verwijderOefening()">
+							</div>
+						</div>
 
-				<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
-					integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
-					crossorigin="anonymous"></script>
-				<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
-					integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
-					crossorigin="anonymous"></script>
-				<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"
-					integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI"
-					crossorigin="anonymous"></script>
+						<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+							integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+							crossorigin="anonymous"></script>
+						<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
+							integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
+							crossorigin="anonymous"></script>
+						<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"
+							integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI"
+							crossorigin="anonymous"></script>
 </body>
 
 </html>
