plaatjes op het scherm werkt

--- a/Frontend/frontend_startScherm.html
+++ b/Frontend/frontend_startScherm.html
@@ -168,9 +168,11 @@
         xhr.send();
     }
 
-    function imageLoad(){
+    function imageLoad(id){
         console.log("imageLoad()");
-        var naam = "Deadlift"; 
+        console.log(document.getElementById("oefening"+id).innerHTML);
+        var naam = document.getElementById("oefening"+id).innerHTML; 
+        console.log("naam: "+naam);
         var xhr = new XMLHttpRequest();
         xhr.open("GET", "http://localhost:8082/Oefening/"+naam+"/get/image",true);
         xhr.responseType = "blob";
@@ -248,12 +250,12 @@
         <form class ="text-center"  > 
             <div class="form-group col-xs-2">
                 <label class="col-sm-2 col-form-label">Username</label><br>
-                <input type="text" style ="text-align:center;"
+                <input type="text" id="exampleGebruikersnaam" style ="text-align:center;"
                     aria-describedby="gebruikersnaamHelp"> 
             </div>
             <div class="form-group">
                 <label class="col-sm-2 col-form-label">Wachtwoord</label><br>
-                <input type="password" style ="text-align:center;">
+                <input type="password" id="exampleWachtwoord" style ="text-align:center;">
                 <small id="wachtwoordHelp" class="form-text text-muted">Dit is volkomen privé</small>
                 <label for="coachcheck">Ben jij coach?</label>
                 <input type="checkbox" id="ifiscoach" name="coachcheck">
