--- a/Frontend/frontend_startSchermSporterVideoTest.html
+++ b/Frontend/frontend_startSchermSporterVideoTest.html
@@ -54,7 +54,8 @@
 				var naam = "<h1>" + rijtjeOefeningen[i].naam + "</h1>";
 				var breakie = "<br>";
 				var uitleg = "<p>" + rijtjeOefeningen[i].uitleg + "</p>";
-				document.getElementById("displayScherm").innerHTML = naam + breakie + uitleg + "<br><img width=\"600\" height=\"600\" id=\"image\"/>";
+				document.getElementById("displayScherm").innerHTML = naam + breakie + uitleg + "<video src=\"\" type=\"video/mp4\" id=\"image\" height=\"500\" width=\"800\" controls>Ur browser's fucked mate</video>";
+				console.log(document.getElementById("displayScherm").innerHTML);
 				imageLoad(i,rijtjeOefeningen[i].naam);
 			}
 		};
@@ -70,46 +71,21 @@
             if(this.readyState==4){
                 console.log(this.response);
                 var urlCreator = window.URL || window.webkitURL;
-                var imageUrl = urlCreator.createObjectURL(this.response);
+				
+                HTMLMediaElement.src = window.URL.createObjectURL(this.response);
+				var imageUrl = HTMLMediaElement.src;
                 console.log(imageUrl);
-                var callback = function(loaded) {
-                    if (loaded === true) {
-                        console.log("loaded");
-                        var img = this; // now `this` points to the image itself.
-                        console.log(img.src);
-                        document.getElementById("image").src += img.src;
-                    } else {
-                        console.log("not loaded");
-                        // show default image or 'image failed to load'.
-                        document.getElementById("image").src += "https://i.pinimg.com/236x/26/5c/64/265c64d86b95f3f85c9684d98250340b--question-mark-loaded-question.jpg";
-                    }
-                };
-                loadImg(imageUrl,callback)
+				const video = document.getElementById('image');
+				video.src = imageUrl;
+				video.type = "video/mp4";
+				console.log(video);
+				video.load();
+				video.play();
             }
         };
         xhr.open("GET", "http://localhost:8082/Oefening/"+naam+"/get/image",true);
         xhr.responseType = "blob";
         xhr.send();
-    }
-	function loadImg(url, fn) {
-        var img = new Image();
-        img.src = url;
-        console.log("loadImg1");
-        if (img.complete) { // If the image has been cached, just call the callback
-            if (fn) fn.call(img, true);
-            console.log("loadImg2");
-        } else {
-            img.onerror = function() { // If fail to load the image
-                if (fn) fn.call(img, false);
-                console.log("loadImg3");
-            };
-            img.onload = function() { // If loaded successfully
-                if (fn) fn.call(img, true);
-                //On IE6, multiple frames in a image will fire the 'onload' event for multiple times. So set to null
-                //img.onload = null; 
-                console.log("loadImg4");
-            };
-        };
     }
 
 	function mailVersturenCoach() {
